Mil/lib/McxAPI.h



extern S16BIT mcx_Start_RateMode (U16BIT deviceId, U16BIT busList, U16BIT numberOfIterations);

extern S16BIT mcx_Element_SetRate(U16BIT deviceId, U16BIT elementId, U16BIT rate, U16BIT skew, U16BIT elementSpacing);


extern S16BIT mcx_SetRTsResponseDelay(U16BIT deviceId, U16BIT rtResponseHalfUs, U16BIT respondAnyway);
 

extern S16BIT mcx_Send_AsynchMsg1(U16BIT deviceId, U16BIT command, U16BIT options, U16BIT statusWord, U16BIT* buffer, U16BIT bufferSize);

extern S16BIT mcx_Send_AsynchMsg2(U16BIT deviceId, U16BIT command, U16BIT options, U16BIT statusWord, U16BIT* buffer, U16BIT bufferSize);

extern S16BIT mcx_Get_Asynch1_Results(U16BIT deviceId, U16BIT* blockStatusWord, WORD* buffer, U16BIT bufferSize, U16BIT* status, U16BIT* tag);

extern S16BIT mcx_Get_Asynch2_Results(U16BIT deviceId, U16BIT* blockStatusWord, WORD* buffer, U16BIT bufferSize, U16BIT* status, U16BIT* tag);


extern S16BIT mcx_SetCyberAttack(U16BIT deviceId, U16BIT cyberAttackType, U16BIT triggerCommand);

extern S16BIT mcx_GetTemperature(U16BIT deviceId, S16BIT* temperature);


extern S16BIT mcx_Eth_SetupIpType(U16BIT requestType);

extern S16BIT mcx_Eth_SetServerIPsList(U16BIT serversNumber, S8BIT* ips);


//extern S16BIT mcx_A429_Channel_GetCount(U32BIT* numOfChannels);
//extern S16BIT mcx_A429_Channel_Open(U16BIT channel, mcx_A429ChannelInfo* channelInfo);
//extern S16BIT mcx_A429_Setup(U16BIT device);
//extern S16BIT mcx_A429_Channel_GetInformation(U16BIT channel, mcx_A429ChannelInfo* channelInfo);
//extern S16BIT mcx_A429_Channel_Close(U16BIT channel);
//extern S16BIT mcx_A429_Channel_SetConfigRegister(U16BIT channel, U32BIT chanFlags);
//extern S16BIT mcx_A429_Channel_GetConfigRegister(U16BIT channel, U32BIT* chanFlags);
//extern S16BIT mcx_A429_Channel_GetStatusRegister(U16BIT channel, U32BIT* chanStats);
//extern S16BIT mcx_A429_Receive (U16BIT channel, U32BIT bufferSize, U32BIT* buffer, U32BIT* numberOfReceivedWords);
//extern S16BIT mcx_A429_Send (U16BIT channel, U32BIT bufferSize, U32BIT* buffer, U32BIT* numberOfWrittenWords);
//extern S16BIT mcx_A429_GetRxWordsPending(U16BIT channel, U32BIT* numberOfWords);
//extern S16BIT mcx_A429_Channel_Reset(U16BIT channel, U32BIT chanFlags);
//extern S16BIT mcx_A429_Card_SetConfiguration(U32BIT cardFlags);

extern S16BIT mcx_GetPciProductIds(S32BIT* pIds, S16BIT* numberOfCardsFound);

extern S16BIT mcx_GetPciMake(S16BIT card, S16BIT* make);


extern S16BIT mcx_Read_Debug(U16BIT deviceId, U16BIT address, WORD bufferSize, WORD* buffer);

extern S16BIT mcx_Write_Debug(U16BIT deviceId, U16BIT address, WORD bufferSize, WORD* buffer);


extern S16BIT mcx_TestExternalLoopback_DevicetoDevice(U16BIT device0, U16BIT device1, U16BIT* resultD0A, U16BIT* resultD0B, U16BIT* resultD1A, U16BIT* resultD1B, BOOLEAN* badDataFound);


extern S16BIT mcx_wm_DumpMonitor_RawData (U16BIT deviceId, S8BIT* fileFullName, U32BIT lengthToDump, U16BIT options);

extern S16BIT mcx_wm_DumpMonitor_Cancel (U16BIT deviceId);


extern S16BIT mcx_Element_UpdateData(U16BIT deviceId, U16BIT busList, U16BIT element);

extern S16BIT mcx_Element_UpdateStatuses(U16BIT deviceId, U16BIT element, U16BIT rxStatus, U16BIT txStatus);

extern S16BIT mcx_Get_Buslist_TransmittedElements(U16BIT deviceId, U16BIT busList, U8BIT * elementsTransmitted);


extern S16BIT mcx_Read_17(U16BIT deviceId, U16BIT address, WORD bufferSize, WORD* buffer);

extern S16BIT mcx_GetApiDebugData (U16BIT deviceId, U32BIT* wordsPending, U32BIT* maxWordsPending);

extern S16BIT mcx_TransmitSingleMessageOnce(U16BIT deviceId, U16BIT cmd, U16BIT* buffer, U16BIT size, U16BIT* BSW, U16BIT* rtStatus, bool emulateRt=false, bool busA=true, U16BIT gap=0);