Mil/lib/McxAPIWrapper.cs


        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Pci_Channel_Close(uint card, uint channel);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Pci_Channel_SetConfigRegister(uint card, uint channel, uint chanFlags, bool manage = false, UInt32 manFreq = 0);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Pci_Channel_GetConfigRegister(uint card, uint channel, ref uint chanFlags);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Pci_Channel_GetStatusRegister(uint card, uint channel, ref uint chanStats);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Pci_Receive(uint card, uint channel, uint bufferSize, ref uint buffer, ref uint numberOfReceivedWords);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Pci_Send(uint card, uint channel, uint bufferSize, ref uint buffer, ref uint numberOfWrittenWords);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Pci_GetRxWordsPending(uint card, uint channel, ref uint numberOfWords);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Pci_Card_SetConfiguration(uint card, uint cardFlags);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Pci_Channel_Reset(uint card, uint channel, uint cardFlags);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Read_Debug(uint deviceId, uint address, ushort size, ref ushort buffer);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Write_Debug(uint deviceId, uint address, ushort size, ref ushort buffer);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_SetCyberAttack(uint deviceId, uint cyberAttackType, uint triggerCommand);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_TestExternalLoopback_DevicetoDevice(uint device0, uint device1, ref ushort resultD0A, ref ushort resultD0B, ref ushort resultD1A, ref ushort resultD1B, ref bool badDataFound);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Eth_SetupIpType(uint requestType);

        [DllImport("McxAPI.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Eth_SetServerIPsList(uint serversNumber, string ips);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Send_AsynchMsg1(uint deviceId, uint command, uint options, uint statusWord, ref ushort buffer, ushort bufferSize);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Send_AsynchMsg2(uint deviceId, uint command, uint options, uint statusWord, ref ushort buffer, ushort bufferSize);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Get_Asynch1_Results(uint deviceId, ref uint blockStatusWord, ref ushort buffer, ushort bufferSize, ref ushort status, ref ushort tag);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Get_Asynch2_Results(uint deviceId, ref uint blockStatusWord, ref ushort buffer, ushort bufferSize, ref ushort status, ref ushort tag);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_SetRTsResponseDelay(uint deviceId, ushort rtResponseHalfUs, ushort respondAnyway);

        [DllImport("McxAPI.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_wm_DumpMonitor_RawData(uint deviceId, string fullName, uint lengthToDump, ushort options);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_wm_DumpMonitor_Cancel(uint deviceId);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Element_SetRate(uint deviceId, uint elementId, uint rate, uint skew, uint elementSpacing);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Start_RateMode(uint deviceId, uint busList, uint numberOfIterations);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Element_UpdateData(uint deviceId, uint busList, uint element);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Element_UpdateStatuses(uint deviceId, uint element, uint rxStatus, uint txStatus);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Get_Buslist_TransmittedElements(uint deviceId, uint busList, ref char elementsTransmitted);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Read_17(uint deviceId, uint address, ushort size, ref ushort buffer);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_GetApiDebugData(uint deviceId, ref uint wordsPending, ref uint maxWordsPending);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_GetTemperature(uint deviceId, ref int temperature);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_GetPciProductIds(ref uint pIds, ref int numberOfCardsFound);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_GetPciMake(uint card, ref int make);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_GetPciMakeByDevice(uint swDevice, ref int make);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_TransmitSingleMessageOnce(UInt16 deviceId, UInt16 cmd, ref UInt16 buffer, UInt16 size, ref UInt16 BSW, ref UInt16 rtStatus);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_TransmitFrame(UInt16 deviceId, UInt16 cmd, bool emulateRt, ref UInt16 buffer, UInt16 size, ref UInt16 BSW, ref UInt16 rtStatus);
    }
}
